cholera 0.6.0
==================

# Fixes #

- fix title in euclideanPath(type = "case-pump").
- fix destination label for walkingPath(destination = NULL).

# Data Changes #

- add Earl of Aberdeen residence (Argyll House).

# Function Changes #

- addNeighborhood() -> addNeighborhoodWalking()

# Function Changes - new arguments #

- addSnow(type = "perimeter", line.width = 2)
- neighborhoodData(embed = TRUE, embed.landmarks = TRUE)
- neighborhoodEuclidean(case.set = "expected")
- plot.voronoi(voronoi.cells = TRUE, delauny.triangles = FALSE)
- snowMap(...)
- streetNameLocator(add.subtitle = TRUE, token = id)
- streetNumberLocator(add.subtitle = TRUE, token = id)

# Function Changes - polygon.method argument #

- addNeighborhoodEuclidean(polygon.method = "traveling.salesman")
- plot.euclidean(polygon.method = "traveling.salesman")

- addNeighborhoodWalking(polygon.method = "pearl.string")
- plot.walking(polygon.method = "pearl.string")

# Function Changes - landmarks as origin and/or destination (treated as cases) #

- euclideanDistance()
- euclideanPath()
- walkingDistance()
- walkingPath()

# Function Changes - case.location argument: "address" or "nominal" #

- addVoronoi(case.location = "nominal")
- euclideanDistance(case.location = "nominal")
- euclideanPath(case.location = "nominal")
- neighborhoodEuclidean(case.location = "nominal")

# New Functions #

- addCase()
- addDelauny()
- addNeighborhoodCases()
- deldirPolygons()
- profile2D()
- profile3D()
- streetHighlight()

# New S3 Function #

- pearsonResiduals()
- plot.neighborhood_data()

# New Vignette #

- "deldirPolygons(): Tiles, Triangles and Polygons"


cholera 0.5.1
==================

# Fixes #

- backward compatibility (R 3.4.4) related to base::isFALSE() & bug fix.
- fix for multiple results in walkingDistance() and walkingPath().

# Function Changes #

- enable ellipses (...) in plot.time_series() (#1).
- enable ellipses and negative selection in addPump().