@@ -96,9 +96,11 @@
 #' @format A data frame with 6 variables that records the position of the orthogonal projection of landmarks onto the network of roads.
 #'  \describe{
 #'     \item{\code{road.segment}}{"address" road segment}
-#'     \item{\code{x.proj}}{x-coordinate}
-#'     \item{\code{y.proj}}{y-coordinate}
+#'     \item{\code{x.proj}}{orthogonal x-coordinate}
+#'     \item{\code{y.proj}}{orthogonal y-coordinate}
 #'     \item{\code{ortho.dist}}{orthogonal distance to home road segment}
+#'      \item{\code{x}}{nominal x-coordinate}
+#'     \item{\code{y}}{nominal y-coordinate}
 #'     \item{\code{name}}{landmark name}
 #'     \item{\code{case}}{numeric case ID}
 #'  }
@@ -111,8 +113,8 @@
 #' @format A data frame with 6 variables that records the position of the orthogonal projection of landmarks onto the network of roads.
 #'  \describe{
 #'     \item{\code{name}}{square name}
-#'     \item{\code{x.proj}}{x-coordinate}
-#'     \item{\code{y.proj}}{y-coordinate}
+#'     \item{\code{x}}{x-coordinate}
+#'     \item{\code{y}}{y-coordinate}
 #'     \item{\code{case}}{numeric case ID}
 #'  }
 #' @docType data
