@@ -9,6 +9,7 @@ cholera 0.6.0
 # Data Changes #
 
 - add Earl of Aberdeen residence (Argyll House).
+- update landmarks and landmark.squares
 
 # Function Changes #
 
